--- a/.env
+++ b/.env
@@ -25,15 +25,15 @@ APP_SECRET=07821c655e48dfdd06db6afb572b249b
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_%kernel.environment%.db"
-DATABASE_URL="mysql://sfifa:sfifa@db/sfifa?serverVersion=8.0&charset=utf8mb4"
+DATABASE_URL="mysql://awal:awal@db/awal?serverVersion=8.0&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
-MYSQL_ROOT_PASSWORD=sfifa
-MYSQL_DATABASE=sfifa
-MYSQL_USER=sfifa
-MYSQL_PASSWORD=sfifa
+MYSQL_ROOT_PASSWORD=awal
+MYSQL_DATABASE=awal
+MYSQL_USER=awal
+MYSQL_PASSWORD=awal
 
 ###> symfony/messenger ###
 # Choose one of the transports below
@@ -47,7 +47,7 @@ MAILER_DSN=smtp://mailhog:1025
 ###< symfony/mailer ###
 
 MAILER_FROM_ADDRESS=mailer@dev.com
-MAILER_FROM_NAME='Sfifa team'
+MAILER_FROM_NAME='Awal team'
 
 ###> karser/karser-recaptcha3-bundle ###
 RECAPTCHA3_KEY=6LdGdVsrAAAAAG47HxmPcc4ra2xft79x7_FX5Ke4
